--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-Flask==2.0.1
+Flask==3.0.3
 requests==2.25.1
 requests-oauthlib==1.3.1
 rsa==4.9
 zipp==1.0.0
 pandas==2.2.1
 Pillow==9.0.1
+apparmor==4.0.2
